--- a/GRU-P.csproj
+++ b/GRU-P.csproj
@@ -114,7 +114,8 @@
     </ItemGroup>
     <ItemGroup>
         <Compile Include="API.cs" />
-        <Compile Include="Commands\Spawn.cs" />
+        <Compile Include="Commands\CommandHandler.cs" />
+        <Compile Include="Commands\Subcmds\Spawn.cs" />
         <Compile Include="Config.cs" />
         <Compile Include="EventHandlers.cs" />
         <Compile Include="Plugin.cs" />
