--- a/GRU-P.csproj
+++ b/GRU-P.csproj
@@ -116,6 +116,7 @@
         <Compile Include="API.cs" />
         <Compile Include="Commands\CommandHandler.cs" />
         <Compile Include="Commands\Subcmds\Spawn.cs" />
+        <Compile Include="Commands\Subcmds\SpawnTeam.cs" />
         <Compile Include="Config.cs" />
         <Compile Include="EventHandlers.cs" />
         <Compile Include="Plugin.cs" />
