--- a/GRU-P.csproj
+++ b/GRU-P.csproj
@@ -48,25 +48,25 @@
           <HintPath>..\..\..\..\Steam\steamapps\common\SCP Secret Laboratory Dedicated Server\SCPSL_Data\Managed\CommandSystem.Core.dll</HintPath>
         </Reference>
         <Reference Include="Exiled.API">
-          <HintPath>C:\Users\admin\AppData\Roaming\EXILED\Plugins\dependencies\Exiled.API.dll</HintPath>
+          <HintPath>..\..\EXILED\bin\Debug\Exiled.API.dll</HintPath>
         </Reference>
         <Reference Include="Exiled.CreditTags">
-          <HintPath>C:\Users\admin\AppData\Roaming\EXILED\Plugins\Exiled.CreditTags.dll</HintPath>
+          <HintPath>..\..\EXILED\bin\Debug\Exiled.CreditTags.dll</HintPath>
         </Reference>
         <Reference Include="Exiled.CustomItems">
-          <HintPath>C:\Users\admin\AppData\Roaming\EXILED\Plugins\Exiled.CustomItems.dll</HintPath>
+          <HintPath>..\..\EXILED\bin\Debug\Exiled.CustomItems.dll</HintPath>
         </Reference>
         <Reference Include="Exiled.CustomRoles">
-          <HintPath>C:\Users\admin\AppData\Roaming\EXILED\Plugins\Exiled.CustomRoles.dll</HintPath>
+          <HintPath>..\..\EXILED\bin\Debug\Exiled.CustomRoles.dll</HintPath>
         </Reference>
         <Reference Include="Exiled.Events">
-          <HintPath>C:\Users\admin\AppData\Roaming\EXILED\Plugins\Exiled.Events.dll</HintPath>
+          <HintPath>..\..\EXILED\bin\Debug\Exiled.Events.dll</HintPath>
         </Reference>
         <Reference Include="Exiled.Permissions">
-          <HintPath>C:\Users\admin\AppData\Roaming\EXILED\Plugins\Exiled.Permissions.dll</HintPath>
+          <HintPath>..\..\EXILED\bin\Debug\Exiled.Permissions.dll</HintPath>
         </Reference>
-        <Reference Include="Exiled.Updater">
-          <HintPath>C:\Users\admin\AppData\Roaming\EXILED\Plugins\Exiled.Updater.dll</HintPath>
+        <Reference Include="Mirror">
+          <HintPath>..\..\..\..\Steam\steamapps\common\SCP Secret Laboratory Dedicated Server\SCPSL_Data\Managed\Mirror.dll</HintPath>
         </Reference>
         <Reference Include="SemVer">
           <HintPath>C:\Users\admin\AppData\Roaming\EXILED\Plugins\dependencies\SemVer.dll</HintPath>
