--- a/GRU-P.csproj
+++ b/GRU-P.csproj
@@ -78,6 +78,9 @@
       <Reference Include="Exiled.Updater, Version=3.1.2.0, Culture=neutral, processorArchitecture=Amd64">
         <HintPath>..\packages\EXILED.7.0.0-rc.1-2\lib\net48\Exiled.Updater.dll</HintPath>
       </Reference>
+      <Reference Include="Mirror">
+        <HintPath>..\..\..\..\Steam\steamapps\common\SCP Secret Laboratory Dedicated Server\SCPSL_Data\Managed\Mirror.dll</HintPath>
+      </Reference>
       <Reference Include="mscorlib" />
       <Reference Include="NorthwoodLib, Version=1.2.1.0, Culture=neutral, processorArchitecture=MSIL">
         <HintPath>..\packages\EXILED.7.0.0-rc.1-2\lib\net48\NorthwoodLib.dll</HintPath>
@@ -92,6 +95,9 @@
       </Reference>
       <Reference Include="UnityEngine.CoreModule">
         <HintPath>..\..\..\..\Steam\steamapps\common\SCP Secret Laboratory Dedicated Server\SCPSL_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
+      </Reference>
+      <Reference Include="UnityEngine.PhysicsModule">
+        <HintPath>..\..\..\..\Steam\steamapps\common\SCP Secret Laboratory Dedicated Server\SCPSL_Data\Managed\UnityEngine.PhysicsModule.dll</HintPath>
       </Reference>
     </ItemGroup>
     <ItemGroup>
