--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EXILEDOFFICIAL" version="8.11.0" targetFramework="net48" />
+  <package id="ExMod.Exiled" version="9.6.0-beta5" targetFramework="net48" />
   <package id="System.ComponentModel" version="4.3.0" targetFramework="net48" />
 </packages>
